Prevent radio input from displaying at all on iOS

--- a/styles/global.css
+++ b/styles/global.css
@@ -129,6 +129,8 @@ input {
   -webkit-appearance: none;
   appearance: none;
   margin: 0;
+  border: 0; /* Required for iOS */
+  width: 0; /* Required for iOS */
 }
 
 input + label {
